<resources>
    <string name="app_name">Reader</string>
    <string name="button_text_login">Log In</string>
    <string name="button_text_create_account">Create Account</string>
    <string name="version_description">version %s</string>
    <string name="menu_see_all_friends">Friends List</string>
    <string name="menu_add_sources">ADD SOURCES</string>
    <string name="menu_all_articles">All ARTICLES</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="hint_username">Username</string>
    <string name="hint_passcode">Password</string>
    <string name="desc_sign_up">By registering or signing in, you are agreeing to our Terms Of Service and Privacy Policy.</string>
    <string name="settings_option_dark_mode">Dark mode</string>
    <string name="settings_option_send_feedback">Send feedback</string>
    <string name="settings_option_clear_cache">Clear cache</string>
    <string name="settings_option_about">About</string>
    <string name="medium_feed_input_hint">\@Author or Publications</string>
    <string name="add_medium_button">Add Medium</string>
    <string name="medium_input_desc">Enter Medium profile or publication name here.</string>
    <string name="add_feed_button">Add</string>
    <string name="sample_rss_link">rss.example.com</string>
    <string name="feed_input_desc">Enter RSS link here.</string>
    <string name="medium_feed_sample_desc_template">medium.com/feed/%s</string>
    <string name="medium_feed_sample_desc">medium.com/feed/@Author or /publication</string>
    <string name="dismiss">Dismiss</string>
    <string name="snackbar_feed_add_success">Successfully added feed</string>
    <string name="about_app_version_desc">Application version</string>
    <string name="clear_cache_cache_size_desc">Current database size</string>
    <string name="clear_cache_clear_cache_desc">Clear database</string>
    <string name="email_feed_back_greet_body">Hi there, </string>
    <string name="email_feed_back_greet_subject">Reader: I would like to suggest some changes/bug to the app</string>
    <string name="email_client_choose">Send Feedback</string>
    <string name="settings_option_send_feedback_summary">Report technical issues or suggest new features</string>
    <string name="settings_option_clear_cache_summary">Clear local cache data for articles and subscriptions</string>
    <string name="settings_option_about_summary">See application version, build info, etc</string>
    <string name="settings_news_disclosures">DISCLOSURE</string>
    <string name="settings_news_disclosures_summary">News app category disclosures</string>
    <string name="disclosure_title">Disclosures</string>
    <string name="placeholder_text">The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader\'s attention is focused on the layout of the text instead of its content.</string>
    <string name="placeholder_email">myemail@email.com</string>
    <string name="placeholder_phone_number">(123)–456–7890</string>
    <string name="placeholder_website">www.site.com</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="toolbar_my_feed_button_text">me</string>
    <string name="toolbar_explore_feed_button_text">explore</string>
    <string name="warning_message_login_auth_failed">Incorrect login credentials</string>
    <string name="warning_message_unknown_exception">Something went wrong</string>
</resources>
