<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/large_layout_margin"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/textViewPadding"
            android:text="@string/feed_input_desc"
            android:textColor="@color/default_text" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sample_rss_link"
            app:boxStrokeColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feed_input_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textSize="@dimen/textSizeSmall" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_feed_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/add_feed_button"
            android:textColor="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_layout_margin"
            android:padding="@dimen/textViewPadding"
            android:src="@drawable/medium_social_media_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/textViewPadding"
            android:text="@string/medium_input_desc"
            android:textColor="@color/default_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/medium_feed_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/textViewPadding"
            android:paddingEnd="@dimen/textViewPadding"
            android:text="@string/medium_feed_sample_desc"
            android:textColor="@color/default_text_light"
            android:textSize="@dimen/textSizeSmall" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medium_feed_input_hint"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/medium_feed_input_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:textSize="@dimen/textSizeSmall" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_medium_feed_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/add_medium_button"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</RelativeLayout>