<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_app_version_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/textViewMargin"
        android:gravity="center_horizontal"
        android:textSize="@dimen/textSizeSmall"
        tools:text="v0.0.1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_inputs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/large_layout_margin"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/the_old_reader_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_layout_margin"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/ic_the_old_reader_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <com.haomins.ui.edittext.ReaderEditText
            android:id="@+id/login_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_layout_margin"
            android:hint="@string/hint_username"
            app:layout_constraintTop_toBottomOf="@id/the_old_reader_logo" />

        <com.haomins.ui.edittext.ReaderPasswordEditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin"
            android:hint="@string/hint_passcode"
            app:layout_constraintTop_toBottomOf="@id/login_username_edit_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_layout_margin"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/login_password_edit_text">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_text_default_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_text_sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSizeSmall" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_text_default_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_text_login"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textSizeSmall" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_sign_up_text_view"
        style="@style/ReaderTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/news_app_disclosure"
        android:layout_margin="@dimen/large_layout_margin"
        android:clickable="true"
        android:justificationMode="inter_word"
        android:text="@string/desc_sign_up"
        android:textSize="@dimen/textSizeTiny" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/news_app_disclosure"
        style="@style/ReaderTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/large_layout_margin"
        android:clickable="true"
        android:justificationMode="inter_word"
        android:text="@string/settings_news_disclosures"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSizeSmall" />

</RelativeLayout>